--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .header{
     display: flex;
     /* align-items: center; */
@@ -15,4 +16,12 @@
     color: #0088cc /*#b41818*/; /* цвет текста*/
     text-transform:  uppercase;
     text-align: center;
+}
+.container{
+    display: flex;
+    /* align-items: center; */
+    justify-content: center; 
+}
+.left{
+    margin: 10px; /* отступ вокруг объекта*/
 }
